Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85289

qmlformat breaks if statement in Component.onCompleted

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 5.15.1, 6.0
    • 6.0
    • QML: Tooling
    • 38e0b279d9c36d029918a2d86575050d13778d86 (qt/qtdeclarative/dev) e9d03ec78fd95d10e9d9653c1f3d6dc5433de433 (qt/qtdeclarative/5.15)

      import Qt.test 1.0
      import QtQuick 2Item {
          id: root
          property ClassWithQProperty2 testee: null
          Repeater {
              model: 2
              Item {
                  ClassWithQProperty2 {
                      id: myself
                      value: index+1
                      Component.onCompleted: if (index == 1) {root.testee = myself}
                  }
              }
          }
      }

      Resulted fromĀ https://testresults.qt.io/logs/qt/qtdeclarative/f3838f3901a7815f154364d13692e8e03ceba3ab/LinuxRHEL_7_6x86_64LinuxRHEL_7_6x86_64GCCqtci-linux-RHEL-7.6-x86_64-2ce4c9UseLegacyInstructions/0f2e973f56cbfaa48e80398ae8a4c62e3f87483e/test_1593177135/log.txt.gz

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            max.goldstein Maximilian Goldstein
            fabiankosmale Fabian Kosmale
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes