qmlformat: Fix multiline bindings

Some bindings may turn multiline while formatting.
This change makes sure this is handled properly.

Fixes: QTBUG-85289
Pick-to: 5.15
Change-Id: I6df98b926d69a23480003c3d9705bc34c3dd0d5d
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>