tests/auto/qml/qmlformat/data/largeBindings.formatted.qml
@@ -1,6 +1,11 @@
 QtObject {
     small1: 3
     small2: foo
+    smallButNeedsBraces: {
+        if (foo) {
+            bar();
+        }
+    }
     // THIS NEEDS TO BE LAST
     largeBinding: {
         var x = 300;
